[project]
name = "hr-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-mistralai>=1.1.4",
    "langchain-text-splitters>=1.1.2",
    "protobuf==3.20.3",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
